# Veritoken

./: .gitignore  Cargo.toml  PR_DESCRIPTION.md  README.md  issues.md  package-lock.json
.github/workflows/: ci.yml
contracts/carbon-credit-token/: Cargo.toml
contracts/carbon-credit-token/src/: lib.rs  test.rs
contracts/compliance-engine/: Cargo.toml
contracts/compliance-engine/src/: lib.rs  test.rs
contracts/invoice-token/: Cargo.toml
contracts/invoice-token/src/: lib.rs  test.rs
contracts/kyc-registry/: Cargo.toml
contracts/kyc-registry/src/: lib.rs  test.rs
contracts/property-token/: Cargo.toml
contracts/property-token/src/: lib.rs  test.rs
contracts/rwa-token/: Cargo.toml
contracts/rwa-token/src/: admin.rs  allowance.rs  balance.rs  compliance.rs  kyc.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/lib/: stellar.ts  useAddressValidation.ts  validation.ts  wallet.ts
frontend/src/pages/: AdminPage.tsx  CarbonPage.tsx  Dashboard.tsx  InvoicePage.tsx  KycPage.tsx  PropertyPage.tsx
frontend/src/types/: index.ts
scripts/: deploy.sh  setup-identity.sh
